--- a/index.html
+++ b/index.html
@@ -139,6 +139,49 @@
 
             </div>
             </div>
+            <div class="videos_block">
+                <div class="videos">
+                    <div class="video"></div>
+                    <div class="video"></div>
+                    <div class="video"></div>
+                    <div class="video"></div>
+    
+                    <div class="about_video">
+                        <img src="img/channel_icon_subscription_1.jpg" width="36" style="border-radius: 100%;">
+                        <div class="about_video_text">
+                            <h3>Alan Walker - The Spectre</h3>
+                            <p>Alan Walker</p>
+                            <p>898 млн переглядів 3 роки тому</p>
+                        </div>
+                    </div>
+                    <div class="about_video">
+                        <img src="img/channel_icon_video_4.jpg" width="36" style="border-radius: 100%;">
+                        <div class="about_video_text">
+                            <h3>Dynoro & Gigi D’Agostino - In My <br> Mind
+                            </h3>
+                            <p>Chill Nation</p>
+                            <p>920 млн переглядів 2 роки тому</p>
+                        </div>
+                    </div>
+                    <div class="about_video">
+                        <img src="img/channel_icon_video_3.jpg" width="36" style="border-radius: 100%;">
+                        <div class="about_video_text">
+                            <h3>Linkin Park - In The End (Mellen Gi <br> & Tommee Profitt Remix)</h3>
+                            <p>TrapMusicHDTV</p>
+                            <p>712 млн переглядів 2 роки тому</p>
+                        </div>
+                    </div>
+                    <div class="about_video">
+                        <img src="img/channel_icon_subscription_1.jpg" width="36" style="border-radius: 100%;">
+                        <div class="about_video_text">
+                            <h3>Alan Walker ft. Gavin James - Tired</h3>
+                            <p>Alan Walker</p>
+                            <p>145 млн переглядів 3 роки тому</p>
+                        </div>
+                    </div>
+    
+                </div>
+                </div>
         </main>
     </div>
 </body>
